--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.78.2",
-    "react-native-reanimated": "^3.17.2",
-    "react-native-safe-area-context": "^5.3.0",
+    "react-native-immersive-mode": "^2.0.2",
+    "react-native-svg": "^15.11.2",
+    "react-native-vlc-media-player": "^1.0.81",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
