--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
     "react": "19.0.0",
     "react-native": "0.78.2",
     "react-native-svg": "^15.11.2",
-    "react-native-vlc-media-player": "^1.0.81"
+    "react-native-udp": "^4.1.7",
+    "react-native-vlc-media-player": "^1.0.81",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -29,6 +32,7 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
