--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.6.1",
     "react": "19.0.0",
     "react-native": "0.78.2",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-svg": "^15.11.2",
     "react-native-udp": "^4.1.7",
     "react-native-vlc-media-player": "^1.0.81",
