--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.1.4",
+    "@react-navigation/native-stack": "^7.3.8",
     "@reduxjs/toolkit": "^2.6.1",
     "react": "19.0.0",
     "react-native": "0.78.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2",
     "react-native-udp": "^4.1.7",
     "react-native-vlc-media-player": "^1.0.81",
